<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextBarcodeOrgx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintorgx"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextBarcodeWidthX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintwidthx"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextBarcodeHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintheight"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextBarcodeFontType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintfonttype"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextBarcodeFontPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintfontposition"
            android:inputType="number" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id = "@+id/linearLayoutBarcodetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


        </LinearLayout>
    </ScrollView>

</LinearLayout>