<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_red_4"
    android:keepScreenOn="true"
    tools:context=".UpdateActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_background_2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/button1"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/button2"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btselectfile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/SelectFirm"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btselectfont"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/SelectFont"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_background_2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/testprint"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btset"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/SetParam"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/UpdateFirm"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btUpdateFont"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_2"
                android:text="@string/UpdateFont"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <LinearLayout
                android:id="@+id/linearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0000ff"
            android:textIsSelectable="false" />
    </RelativeLayout>

</RelativeLayout>