<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ce0032"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/printesoft"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView1"
        android:layout_marginTop="5dp"
        android:background="#fffff0" >

        <Button
            android:id="@+id/button1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/back_frame_icon_1_selector" />

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/back_frame_icon_2_selector" />

        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:background="@drawable/back_frame_icon_3_selector" />

        <Button
            android:id="@+id/button4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignLeft="@+id/button2"
            android:background="@drawable/back_frame_icon_4_selector" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/button1"
            android:layout_below="@+id/button1"
            android:gravity="center"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/button2"
            android:gravity="center"
            android:text="@string/textview3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button3"
            android:layout_below="@+id/button4"
            android:gravity="center"
            android:text="@string/textview4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/button4"
            android:gravity="center"
            android:text="@string/textview5" />
    </RelativeLayout>

</RelativeLayout>