<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_green_1"
    android:keepScreenOn="true" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp" >

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="70sp"
                android:layout_height="5dp"
                android:background="@drawable/fenge_normal"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/btconnect"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/btconnect"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="70sp"
                android:layout_height="5dp"
                android:background="@drawable/fenge_normal"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/btpic"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/btpic"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="70sp"
                android:layout_height="5dp"
                android:background="@drawable/fenge_normal"
                android:textIsSelectable="false" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayoutWithTwoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/scrollView1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/scrollView1"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btsearch"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_2"
                    android:text="@string/button1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btdisconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_2"
                    android:text="@string/button2"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/linearLayoutDevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/scrollView1"
        android:layout_alignRight="@id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar1"
        android:layout_below="@+id/progressBar1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false" />

</RelativeLayout>